# polymarket-ai-trader

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  KRAKEN_CPP_BOT_SUMMARY.md  KRAKEN_STRATEGY.md  KRAKEN_STRUCTURE.md  LICENSE  MISSION_COMPLETE.md  README.md  REPOSITORY_STRUCTURE.md  START_HERE.md  STRATEGY_LOG.md  VOLATILITY_SCRAPER_STRATEGY.md  api.js  config.js  game.js  index.html  save-logs.js  scalper.html  setup.html  styles.css  sync-trades.sh
bot/: .env.example  BUILD_AND_DEPLOY.md  CMakeLists.txt  README.md
bot/include/: kraken_api.hpp  learning_engine.hpp
bot/src/: learning_engine.cpp  main.cpp
