cmake_minimum_required(VERSION 3.10)
project(KrakenBot VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -pthread")

# Dependencies
find_package(CURL REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(libwebsockets REQUIRED)

# Include directories
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

# Main bot executable
add_executable(kraken_bot
    src/main.cpp
    src/kraken_api.cpp
    src/strategy_engine.cpp
    src/learning_engine.cpp
    src/trade_logger.cpp
    src/position_manager.cpp
)

target_link_libraries(kraken_bot
    PRIVATE
    CURL::libcurl
    nlohmann_json::nlohmann_json
    OpenSSL::SSL OpenSSL::Crypto
    websockets
    pthread
)

# Build tests
enable_testing()
add_subdirectory(tests)
